# siganim

./: .gitignore  .gitmodules  CMakeLists.txt  fonts.json  sign.json
src/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Serializable.h  SiganimCore.cpp  SiganimCore.h  SiganimDefaults.cpp  SiganimDefaults.h  SiganimFileHandler.cpp  SiganimFileHandler.h  Sign.cpp  Sign.h  SignCell.cpp  SignCellLeaf.cpp  SignCellLeaf.h  SignCellNode.cpp  SignCellNode.h  SignCellSplit.h  SignCellText.cpp  SignCellText.h  SignCellTree.cpp  SignCellTree.h  SignColor.cpp  SignDisplay.cpp  SignDisplay.h  SignImage.cpp  SignImage.h  SignPixel.h  SignRenderer.cpp  SignRenderer.h  SignTree.cpp  SignTree.h  SignTreeVisitor.h  config.h.in  main.cpp  test.cpp  test.h
src/font/: CMakeLists.txt  Character.cpp  Character.h  Font.cpp  Font.h  FontSet.cpp  FontSet.h  UnicodeUtils.cpp  UnicodeUtils.h
src/render/: AnimatedObservableSink.cpp  AnimatedObservableSink.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  DurationComputer.cpp  DurationComputer.h  GIFSink.cpp  GIFSink.h  ObservableSink.cpp  ObservableSink.h  Rasterizer.cpp  Rasterizer.h  RasterizerSet.cpp  RasterizerSet.h  SignRenderer.cpp  SignRenderer.h  SingleFrameSink.cpp  SingleFrameSink.h  StaticObservableSink.cpp  StaticObservableSink.h
src/sign/: BlinkAnimation.cpp  BlinkAnimation.h  CMakeLists.txt  Compose.cpp  Compose.h  MarqueeAnimation.cpp  MarqueeAnimation.h  Observer.cpp  Observer.h  SiganimJSONSignParser.cpp  SiganimJSONSignParser.h  Sign.cpp  Sign.h  SignAnimation.cpp  SignAnimation.h  SignCell.cpp  SignCell.h  SignCellSplit.cpp  SignCellSplit.h  (+13 more)
(+108 files in other folders)
